# gpu-cc-moe-inference

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
prompts/: sidechannel_32.txt  smoke.txt
reports/: experiment_report_zh.md  memory_pressure_observation_zh.md
runs/cc-path-h20-check/: cc_path_measurements.jsonl  env.json  operator_roofline.csv
runs/cc-path-h20-check2/: cc_path_measurements.jsonl  env.json  operator_roofline.csv
runs/cc-path-h20-full/: cc_path_measurements.jsonl  env.json  operator_roofline.csv
runs/qwen-memory-pressure/: env.json
runs/qwen-memory-pressure-baseline-generate/: env.json  memory_pressure_observations.jsonl
runs/qwen-memory-pressure-load-only/: env.json  memory_pressure_observations.jsonl
runs/qwen-smoke-eval/: env.json  sidechannel_eval.json
runs/qwen-smoke-features/: attacker_features.jsonl  env.json
runs/qwen-smoke-labels/: env.json  routing_labels.jsonl
runs/qwen-smoke-latency/: env.json  moe_latency_measurements.jsonl
runs/qwen32-eval/: env.json  sidechannel_eval.json
runs/qwen32-features/: attacker_features.jsonl  env.json
runs/qwen32-labels/: env.json
runs/smoke-cc-path/: cc_path_measurements.jsonl  env.json
runs/smoke-roofline/: cc_path_measurements.jsonl  env.json  operator_roofline.csv
scripts/: run_overhead_pilot.sh  setup_remote_env.sh
src/gpu_cc_moe_inference/: __init__.py  cc_path.py  env.py  io.py  latency.py  memory_pressure.py  (+5 more)
tests/: test_cc_path.py  test_latency.py  test_memory_pressure.py  test_overhead.py  test_schema.py  test_sidechannel.py
(+5 files in other folders)
