[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-cc-moe-inference"
version = "0.1.0"
description = "GPU confidential-computing MoE transfer path and side-channel experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = []

[project.optional-dependencies]
gpu = ["torch", "transformers", "accelerate"]
test = ["pytest"]

[project.scripts]
cc-path-bench = "gpu_cc_moe_inference.cli.cc_path_bench:main"
routing-sidechannel = "gpu_cc_moe_inference.cli.routing_sidechannel:main"
moe-latency-instrument = "gpu_cc_moe_inference.cli.moe_latency_instrument:main"

[tool.setuptools.packages.find]
where = ["src"]
